fixed view set css to align card and add new btn

--- a/frontend/src/Pages/ViewSet.module.css
+++ b/frontend/src/Pages/ViewSet.module.css
@@ -12,7 +12,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        margin: 5px 10px;
+        margin: 5px 20px;
         padding: 30px;
     }
 
